--- a/dev/scss/components/_back-to-top.scss
+++ b/dev/scss/components/_back-to-top.scss
@@ -6,7 +6,7 @@
 
 .back-to-top
 {
-    font-size: 1rem;
+    font-size: modular-scale(1);
     line-height: 1;
 
     position: fixed;
@@ -25,13 +25,13 @@
     border-radius: 50%;
     background-color: rgba(0, 0, 0, .65);
 
-    @include transform(rotate(-90deg));
-    @include transition(all .25s ease-in-out);
+    transform: rotate(-90deg);
+    transition: all .25s ease-in-out;
     &.show
     {
         opacity: 1;
 
-        @include transform(rotate(0deg));
+        transform: rotate(0deg);
     }
     &:hover,
     &:focus
