--- a/dev/scss/components/_hamburger.scss
+++ b/dev/scss/components/_hamburger.scss
@@ -1,20 +1,18 @@
 /* -----------------------------------------------------------------------------
 
   HAMBURGER ICONS COMPONENT
-  
+
 ----------------------------------------------------------------------------- */
 
 // vars
 
-$button-width: 50px;                    // The width of the button area
-$button-height: 50px;                   // The height of the button area
-$bar-thickness: 3px;                    // The thickness of the button bars
+$button-width: 60px;                    // The width of the button area
+$button-height: 60px;                   // The height of the button area
+$bar-thickness: 5px;                    // The thickness of the button bars
 $button-pad: 10px;                      // The left/right padding between button area and bars.
-$button-bar-space: 4px;                // The spacing between button bars
+$button-bar-space: 10px;                // The spacing between button bars
+$button-transistion-duration: 0.35s;     // The transition duration
 
-$bar-color: $light-gray;
-$bar-color-active: tint($bar-color, 10%);
-$background-color: transparent;
 
 /**
  * Toggle Switch Globals
@@ -23,10 +21,10 @@ $background-color: transparent;
  * variant that will give them unique properties. This class is an overview
  * class that acts as a reset for all versions of the icon.
  */
-
 .toggle-menu {
   display: inline-block;
   position: relative;
+  z-index: 1982;
   overflow: hidden;
   margin: 0;
   padding: 0;
@@ -38,86 +36,99 @@ $background-color: transparent;
   -moz-appearance: none;
   appearance: none;
   box-shadow: none;
+  border-radius: none;
   border: none;
   cursor: pointer;
-  border-radius: $base-border-radius;
-  transition: background $base-duration $base-timing;
-  &:focus, &:active, &:hover {
+  transition: background $button-transistion-duration;
+  &:focus, &:active {
     outline: none;
-    background-color: darken($background-color, 10%);
-  }
-  span {
-    display: block;
-    position: absolute;
-    top: ($button-height / 2) - ($bar-thickness / 2);
-    left: $button-pad;
-    right: $button-pad;
-    height: $bar-thickness;
-    background: $bar-color;
-    &::before, &:before,
-    &::after, &:after {
-      position: absolute;
-      display: block;
-      left: 0;
-      width: 100%;
-      height: $bar-thickness;
-      background-color: $bar-color;
-      content: "";
-    }
-    &::before, &:before {
-      top: -$bar-thickness - $button-bar-space;
-    }
-    &::after, &:after {
-      bottom: -$bar-thickness - $button-bar-space;
-    }
+    background-color: transparent;
   }
 }
 
+
+
+.toggle-menu span {
+  display: block;
+  position: absolute;
+  top: ($button-height / 2) - ($bar-thickness / 2);
+  left: $button-pad;
+  right: $button-pad;
+  height: $bar-thickness;
+  background: $light-gray;
+}
+
+.toggle-menu span::before,
+.toggle-menu span::after {
+  position: absolute;
+  display: block;
+  left: 0;
+  width: 100%;
+  height: $bar-thickness;
+  background-color: $light-gray;
+  content: "";
+}
+
+.toggle-menu span::before {
+  top: -$bar-thickness - $button-bar-space;
+}
+
+.toggle-menu span::after {
+  bottom: -$bar-thickness - $button-bar-space;
+}
+
+
+
 /**
  * Style 2
- * 
+ *
  * Hamburger to "x" (htx). Takes on a hamburger shape, bars slide
  * down to center and transform into an "x".
  */
 
 .toggle-menu {
-  background-color: $background-color;
-  span {
-    transition: background $base-duration $base-timing;
-    &::before,
-    &::after {
-      transition-duration: $base-duration, $base-duration;
-      transition-delay: $base-duration, 0s;
-    }
-    &::before {
-      transition-property: top, transform;
-    }
-    &::after {
-      transition-property: bottom, transform;
-    }
-  }
+  background-color: transparent;
+}
+
+.toggle-menu span {
+  transition: background 0s $button-transistion-duration;
+}
+
+.toggle-menu span::before,
+.toggle-menu span::after {
+  transition-duration: $button-transistion-duration, $button-transistion-duration;
+  transition-delay: $button-transistion-duration, 0s;
+}
+
+.toggle-menu span::before {
+  transition-property: top, transform;
+}
+
+.toggle-menu span::after {
+  transition-property: bottom, transform;
 }
 
 /* active state, i.e. menu open */
 
 .toggle-menu.is-active {
-  background-color: darken($background-color, 10%);
-  span {
-    background: none;
-    &::before {
-      top: 0;
-      transform: rotate(45deg);
-    }
+  background-color: transparent;
+}
 
-    &::after {
-      bottom: 0;
-      transform: rotate(-45deg);
-    }
+.toggle-menu.is-active span {
+  background: none;
+}
 
-    &::before,
-    &::after {
-      background-color: $bar-color-active;
-      transition-delay: 0s, $base-duration;
-    }
-  }
+.toggle-menu.is-active span::before {
+  top: 0;
+  transform: rotate(45deg);
+}
+
+.toggle-menu.is-active span::after {
+  bottom: 0;
+  transform: rotate(-45deg);
+}
+
+.toggle-menu.is-active span::before,
+.toggle-menu.is-active span::after {
+  transition-delay: 0s, $button-transistion-duration;
 }
