--- a/dev/scss/styles.scss
+++ b/dev/scss/styles.scss
@@ -1,7 +1,7 @@
 @import "bourbon";
 
 @import "helpers/mixin";
-@import "helpers/font";
+@import "helpers/helvetica-neue";
 
 @import "variables";
 @import "helpers/class";
