--- a/dev/scss/bitters/_variables.scss
+++ b/dev/scss/bitters/_variables.scss
@@ -20,7 +20,7 @@ $light-gray: #ddd;
 
 // Font Colors
 $base-font-color: $dark-gray;
-$action-color: $blue;
+$primary-color: $blue;
 
 // Border
 $base-border-color: $light-gray;
@@ -31,7 +31,7 @@ $base-background-color: #fff;
 $secondary-background-color: tint($base-border-color, 75%);
 
 // Focus
-$focus-outline-color: transparentize($action-color, 0.4);
+$focus-outline-color: transparentize($primary-color, 0.4);
 $focus-outline-width: 3px;
 $focus-outline: $focus-outline-width solid $focus-outline-color;
 $focus-outline-offset: 2px;
