--- a/dev/scss/helpers/_mixin.scss
+++ b/dev/scss/helpers/_mixin.scss
@@ -1,14 +1,5 @@
-$tablet-width: 768px;
-$desktop-width: 1024px;
-
-@mixin tablet {
-  @media (min-width: #{$tablet-width}) and (max-width: #{$desktop-width - 1px}) {
-    @content;
-  }
-}
-
-@mixin desktop {
-  @media (min-width: #{$desktop-width}) {
+@mixin media($value) {
+  @media (min-width: #{$value}) {
     @content;
   }
 }
