--- a/dev/styles/_variables.scss
+++ b/dev/styles/_variables.scss
@@ -2,29 +2,25 @@
 $dark-gray: #333;
 $medium-gray: #999;
 $light-gray: #ddd;
-$primary-color: #990007;
+
+$primary-color: #1565C0;
 $secondary-color: #32251C;
 $tertiary-color: #FFF5E9;
 
 $info-color: #276f86;
 $success-color: #43A047;
 $danger-color: #FF4D4D;
-// Globally change the base ratio
-$bourbon: (
-  //"modular-scale-ratio": 1.250, // Major Third
-  "modular-scale-ratio": 1.333, // Perfect Fourth
-  //"modular-scale-ratio": 1.500, // Perfect Fifth
-  //"modular-scale-ratio": 1.618, // Golden Ratio
-);
+
 // Typography
-@import url('https://fonts.googleapis.com/css?family=Noto+Sans:400,800&display=swap');
-@import url('https://fonts.googleapis.com/css?family=Bitter:400,800&display=swap');
-$base-font-family: 'Noto Sans', sans-serif;
-$heading-font-family: 'Bitter', sans-serif;
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,700&display=swap');
+//@import url('https://fonts.googleapis.com/css?family=Bitter:400,800&display=swap');
+
+$base-font-family: 'Open Sans', sans-serif;
+$heading-font-family: $base-font-family;//'Bitter', sans-serif;
 $base-font-size: 16px;
 $base-line-height: 1.6;
 $heading-line-height: 1.15;
-$base-font-weight: 400;
+$base-font-weight: 300;
 $heading-font-weight: 700;
 // Font Colors
 $base-font-color: $dark-gray;
@@ -45,3 +41,16 @@ $base-box-shadow: 5px 2px 10px 2px rgba(0,0,0,0.1);
 // Animations
 $base-duration: 250ms;
 $base-timing: ease;
+
+// Globally change the base ratio
+$bourbon: (
+  //"modular-scale-ratio": 1.250, // Major Third
+  "modular-scale-ratio": 1.333, // Perfect Fourth
+  //"modular-scale-ratio": 1.500, // Perfect Fifth
+  //"modular-scale-ratio": 1.618, // Golden Ratio
+);
+
+$neat-grid: (
+  columns: 12,
+  gutter: 20px,
+);
