--- a/dev/styles/layout/_header.scss
+++ b/dev/styles/layout/_header.scss
@@ -1,68 +1,18 @@
-#site-header
-{
-    //margin-bottom: $base-spacing*2;
-    padding-bottom: $base-spacing;
+.header {
+  @include clearfix();
+  .container {
+    display: -webkit-flex;
+    display: -ms-flex;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
 
-    background-color: $tertiary-color;
-
-    .menu-pre-header-container, .menu-main-container {
-      text-align: right;
-    }
-
-    .menu
-    {
-        > li
-        {
-            display: inline-block;
-
-            @include media($desktop-width)
-            {
-                > a
-                {
-                    border-radius: 30px;
-                }
-
-                &.current-menu-item,
-                &.current_page_item,
-                &.is-active
-                {
-                    > a
-                    {
-                        background-color: shade($tertiary-color, 10);
-                    }
-                }
-
-                > .sub-menu
-                {
-                    > li
-                    {
-                        > a
-                        {
-                            color: $base-font-color;
-                        }
-                    }
-                }
-            }
-
-            > a
-            {
-                font-size: 15px!important;
-                font-weight: 400;
-
-                padding: $small-spacing/2 $small-spacing;
-
-                text-transform: lowercase;
-
-                color: $dark-gray;
-            }
-        }
-
-        .menu-button
-        {
-            a
-            {
-                @extend .button;
-            }
-        }
-    }
+  }
+  .brand {
+    //float: left;
+  }
+  .navigation {
+    //float: right;
+  }
 }
